# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_util.py,pym/portage.py:
  tweak to make movefile not implode, and get_preferred_fetcher not implode.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_metadata.py, 
  pym/orig_dict_cache.py, pym/portage.py, pym/portage_util.py: Added missing 
  metadata module (contributed via solar iirc), and corrected circular dependency
  issue regarding portage_util trying to provide backwards compatability via
  portage_util.normpath.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/ebuild.py: forgot to commit this
  in the last commit.  Kind of required. :)

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py, bin/emerge, 
  bin/env-update, bin/repoman, cnf/make.conf, pym/ebuild.py, bin/affect-fakeroot-perms.sh:  Merge of the 
  ebuild-daemon code (ebuild.py), along with massive shifts/cleanup/fixes.  At this
  point, the env of an ebuild *should* be perfectly preserved, and used.  This deprecates
  portage.doebuild, in favor of eventually calling an ebuild.py:process_phase.  The 
  code of doebuild now exists as ebuild.py:__adjust_env.  That code needs cleanup, 
  and splitting.  Rough stats for the daemonized ebuild processor code is a 33% reduction
  in run time for a full regen, with the initial framework laid out to allow parallel
  regens on smp systems.  Aside from making all of the previous refactorings active
  (sync refactoring in emerge, transports refactoring in portage.py and repoman), this 
  adds the following-
  portage.exit_callbacks- append a function to this list, and it'll be exited at shutdown