@@ -1,3 +1,8 @@
+# sync/__init__.py; sync module namespace initialization
+# Copyright 2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+$Header$
+
 import rsync
 import cvs
 import snapshot
