@@ -1,3 +1,8 @@
+# transports/__init__.py; worthless file to keep python happy.
+# Copyright 2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+$Header$
+
 # worthless comment so diff creates this file.
 # yay.
 # this will ultimately hold the 'preferred fetcher' in the transport namespace, 
